--- a/research/research.html
+++ b/research/research.html
@@ -24,17 +24,24 @@
         </div>
       </nav>
 
-    <div class="card-panel">
-      <h2>How would you like to find your car?</h2>
-      <div id="research-buttons">
-        <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-        <br>
-        <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+      <div class="card-panel" id="container-research">
+
+      <div class="content">
+        <h2>How would you like to find your car?</h2>
+        <div id="research-buttons">
+          <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+          <br>
+          <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+        </div>
       </div>
 
+      <div class="content">
+        <p>test 1 2 3 </p>
+      </div>
 
+      <a id="trigger">trigger</a>
 
-    </div>
+      </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
