pushing slider implementation that sort of works, but does not hide text to the left of div, and reappears

--- a/research/research.html
+++ b/research/research.html
@@ -26,7 +26,7 @@
 
       <div class="card-panel" id="container-research">
 
-      <div class="content">
+      <div id="content1">
         <h2>How would you like to find your car?</h2>
         <div id="research-buttons">
           <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div id="content2">
         <p>test 1 2 3 </p>
       </div>
 
