--- a/research/research.html
+++ b/research/research.html
@@ -24,19 +24,27 @@
         </div>
       </nav>
 
-      <div class="card-panel" id="container-research">
+      <div class="container">
+        <div class="content">
+          <div class="card-panel" id="container-research">
 
-      <div class="content">
-        <h2>How would you like to find your car?</h2>
-        <div id="research-buttons">
-          <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-          <br>
-          <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+          
+            <h2>How would you like to find your car?</h2>
+            <div id="research-buttons">
+              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+              <br>
+              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="content">
-        <p>test 1 2 3 </p>
+        <div class="content" style="background-color:#333333">
+          <p>test 1 2 3 </p>
+        </div>
+
+        <div class="content" style="background-color:#666666">
+          <p>test 4 5 6 </p>
+        </div>
       </div>
 
       <a id="trigger">trigger</a>
