--- a/research/research.html
+++ b/research/research.html
@@ -24,24 +24,28 @@
         </div>
       </nav>
 
-      <div class="card-panel" id="container-research">
+      <div id="gallery">
+        <div id="slider">
+           
+           <div style="background:#fff">  
+            <h2>How would you like to find your car?</h2>           
+            <span id="research-buttons">
+              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+              <br>
+              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+            </span>
+           </div>
 
-      <div id="content1">
-        <h2>How would you like to find your car?</h2>
-        <div id="research-buttons">
-          <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-          <br>
-          <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+           <div style="background:#ada">2</div>
+           <div style="background:#b0b">3</div>
         </div>
+        <span id="prev">&#9664;</span>
+        <span id="next">&#9654;</span>
       </div>
 
-      <div id="content2">
-        <p>test 1 2 3 </p>
-      </div>
-
-      <a id="trigger">trigger</a>
-
-      </div>
+      
+      <span id="prev">&#9664;</span>
+      <span id="next">&#9654;</span>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
