made background opaque for the gallery container

--- a/research/research.html
+++ b/research/research.html
@@ -27,7 +27,7 @@
       <div id="gallery">
         <div id="slider">
            
-           <div style="background:#fff">  
+           <div>  
             <h2>How would you like to find your car?</h2>           
             <span id="research-buttons">
               <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
@@ -36,8 +36,8 @@
             </span>
            </div>
 
-           <div style="background:#ada">2</div>
-           <div style="background:#b0b">3</div>
+           <div>2</div>
+           <div>3</div>
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
