added new div, and removed unecessary span buttons

--- a/research/research.html
+++ b/research/research.html
@@ -38,14 +38,12 @@
 
            <div>2</div>
            <div>3</div>
+           <div>4</div>
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
       </div>
 
-      
-      <span id="prev">&#9664;</span>
-      <span id="next">&#9654;</span>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
