added car images, and made function more specific with modularization as well as horizontal/vertical separation

--- a/research/research.html
+++ b/research/research.html
@@ -27,7 +27,9 @@
       <div id="gallery">
         <div id="slider">
            
-           <div>  
+
+           <!-- Horizontal sliders -->
+           <div class="horizontal-section">  
             <h2>How would you like to find your car?</h2>           
             <span id="research-buttons">
               <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
@@ -36,9 +38,17 @@
             </span>
            </div>
 
-           <div>2</div>
-           <div>3</div>
-           <div>4</div>
+           <div class="horizontal-section">
+             <h2>Select a Type of Car </h2>
+             <div id=> blabla </div>
+
+           </div>
+           <div class="horizontal-section">3</div>
+           <div class="horizontal-section">4</div>
+           <!-- end Horizontal sliders -->
+
+           <!-- vertical sliders -->
+
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
