--- a/research/research.html
+++ b/research/research.html
@@ -27,7 +27,7 @@
       <div id="gallery">
         <div id="slider">
            
-           <div style="background:#fff">  
+           <div style="background:#fff" class="hor">  
             <h2>How would you like to find your car?</h2>           
             <span id="research-buttons">
               <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
@@ -36,16 +36,24 @@
             </span>
            </div>
 
-           <div style="background:#ada">2</div>
-           <div style="background:#b0b">3</div>
+           <div style="background:#ada" class="hor">2</div>
+           <div style="background:#b0b" class="hor">3</div>
+
+           <div style="background:#333" class="vert">A1</div>
+           <div style="background:#666" class="vert">A2</div>
+
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
+        <span id="down">down</span>
+        <span id="up">up</span>
       </div>
 
       
       <span id="prev">&#9664;</span>
       <span id="next">&#9654;</span>
+      <span id="down">down</span>
+      <span id="up">up</span>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
