--- a/research/research.html
+++ b/research/research.html
@@ -36,22 +36,41 @@
               <br>
               <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
             </span>
-           </div>
+          </div>
 
-           <div class="horizontal-section">
-             <h2>Select a Type of Car </h2>
-             <div id=> blabla </div>
-
-           </div>
-           <div class="horizontal-section">3</div>
-           <div class="horizontal-section">4</div>
+          <div class="horizontal-section">
+            <h2>Select a Type of Car </h2>
+            <div id=> blabla </div>
+          </div>
+          <div class="horizontal-section">3</div>
+          <div class="horizontal-section">4</div>
            <!-- end Horizontal sliders -->
 
            <!-- vertical sliders -->
+          <div class="vertical-section">  
+            <h2>vertical section 2</h2>           
+            <span id="research-buttons">
+              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+              <br>
+              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+            </span>
+          </div>
+
+          <div class="vertical-section">
+            <h2>Select a Type of Car </h2>
+            <div id=> blabla </div>
+          </div>
+          <div class="vertical-section">3</div>
+          <div class="vertical-section">4</div>
+
+          <!-- end vertical section -->
 
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
+        <span id="up">&#9664;</span>
+        <span id="down">&#9654;</span>
+
       </div>
 
 
