--- a/index.html
+++ b/index.html
@@ -1,50 +1,44 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/custom.css"  media="screen,projection"/>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/custom.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  </head>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
-    <body>
-      <div id="homepage-buttons"> 
-        <a href="research/research.html" class="waves-effect waves-light btn-large" id="left-button">Research</a>
-        <a class="waves-effect waves-light btn-large" id="right-button">Purchase</a>
-      </div>
-
-      <div class="slider fullscreen" id="homepage-slider">
-        <ul class="slides">
-          <li>
-            <img src="img/car-bg-1.jpg"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>Welcome to Edmunds</h3>
-              <h5 class="light grey-text text-lighten-3">Your trusted neighborhood car specialist.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="img/car-bg-2.jpg"> <!-- random image -->
-            <div class="caption left-align">
-              <h3>Research a car</h3>
-              <h5 class="light grey-text text-lighten-3">If you're not sure what you want, help us help you.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="img/car-bg-3.jpg"> <!-- random image -->
-            <div class="caption right-align">
-              <h3>Purchase a car.</h3>
-              <h5 class="light grey-text text-lighten-3">Know what you want already? We'll find you the best prices.</h5>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/custom.js"></script>
-    </body>
-  </html>
+  <body>
+    <div id="homepage-buttons"> 
+      <a href="research/research.html" class="waves-effect waves-light btn-large" id="left-button">Research</a>
+      <a class="waves-effect waves-light btn-large" id="right-button">Purchase</a>
+    </div>
+    <div class="slider fullscreen" id="homepage-slider">
+      <ul class="slides">
+        <li>
+          <img src="img/car-bg-1.jpg">
+          <div class="caption center-align">
+            <h3>Welcome to Edmunds</h3>
+            <h5 class="light grey-text text-lighten-3">Your trusted neighborhood car specialist.</h5>
+          </div>
+        </li>
+        <li>
+          <img src="img/car-bg-2.jpg">
+          <div class="caption left-align">
+            <h3>Research a car</h3>
+            <h5 class="light grey-text text-lighten-3">If you're not sure what you want, help us help you.</h5>
+          </div>
+        </li>
+        <li>
+          <img src="img/car-bg-3.jpg">
+          <div class="caption right-align">
+            <h3>Purchase a car.</h3>
+            <h5 class="light grey-text text-lighten-3">Know what you want already? We'll find you the best prices.</h5>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+  </body>
+</html>
