up-down-left-right

--- a/research/research.html
+++ b/research/research.html
@@ -27,11 +27,7 @@
       <div id="gallery">
         <div id="slider">
            
-<<<<<<< HEAD
            <div style="background:#fff" class="hor">  
-=======
-           <div>  
->>>>>>> 70b43c398e6a9340f07947523e1624251989c6de
             <h2>How would you like to find your car?</h2>           
             <span id="research-buttons">
               <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
@@ -40,33 +36,17 @@
             </span>
            </div>
 
-<<<<<<< HEAD
            <div style="background:#ada" class="hor">2</div>
            <div style="background:#b0b" class="hor">3</div>
 
-           <div style="background:#333" class="vert">A1</div>
+           <div style="background:#333" class="vert">A1</div><br>
            <div style="background:#666" class="vert">A2</div>
-
-=======
-           <div>2</div>
-           <div>3</div>
-           <div>4</div>
->>>>>>> 70b43c398e6a9340f07947523e1624251989c6de
         </div>
         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
         <span id="down">down</span>
         <span id="up">up</span>
       </div>
-
-<<<<<<< HEAD
-      
-      <span id="prev">&#9664;</span>
-      <span id="next">&#9654;</span>
-      <span id="down">down</span>
-      <span id="up">up</span>
-=======
->>>>>>> 70b43c398e6a9340f07947523e1624251989c6de
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
