changed functions to be more readable, and made the outer container in research responsive

--- a/research/research.html
+++ b/research/research.html
@@ -8,6 +8,7 @@
   </head>
 
   <body id="research-body">
+    <script>document.body.className += ' fade-out';</script>
     <nav>
       <div class="nav-wrapper white">
         <a href="../index.html" class="brand-logo center"><img src="../img/logo.jpg" id="logo"/></a>
@@ -19,51 +20,55 @@
         </ul>
       </div>
     </nav>
-    <div id="gallery">
-      <div id="slider">
-         <!-- Horizontal sliders -->
-         <div class="horizontal-section">  
-          <h2>How would you like to find your car?</h2>           
-          <span id="research-buttons">
-            <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-            <br>
-            <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
-          </span>
+
+    <div class="row" id="gallery">
+      <div class="col s12 m12 l12">
+        <div id="slider">
+           <!-- Horizontal sliders -->
+           <div class="horizontal-section">  
+            <h2>How would you like to find your car?</h2>           
+            <span id="research-buttons">
+              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+              <br>
+              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+            </span>
+          </div>
+          <div class="horizontal-section">
+            <h2>Select a Type of Car </h2>
+
+
+          </div>
+          <div class="horizontal-section">
+            3
+          </div>
+          <div class="horizontal-section">
+            4
+          </div>
+          <!-- vertical sliders -->
+          <div class="vertical-section">  
+            <h2>vertical section 2</h2>           
+            <span id="research-buttons">
+              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+              <br>
+              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+            </span>
+          </div>
+          <div class="vertical-section">
+            <h2>Select a Type of Car </h2>
+            <div id=> blabla </div>
+          </div>
+          <div class="vertical-section">
+            3
+          </div>
+          <div class="vertical-section">
+            4
+          </div>
         </div>
-        <div class="horizontal-section">
-          <h2>Select a Type of Car </h2>
-          <div id=> blabla </div>
-        </div>
-        <div class="horizontal-section">
-          3
-        </div>
-        <div class="horizontal-section">
-          4
-        </div>
-        <!-- vertical sliders -->
-        <div class="vertical-section">  
-          <h2>vertical section 2</h2>           
-          <span id="research-buttons">
-            <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-            <br>
-            <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
-          </span>
-        </div>
-        <div class="vertical-section">
-          <h2>Select a Type of Car </h2>
-          <div id=> blabla </div>
-        </div>
-        <div class="vertical-section">
-          3
-        </div>
-        <div class="vertical-section">
-          4
-        </div>
+        <span id="prev">&#9664;</span>
+        <span id="next">&#9654;</span>
+        <span id="up">&#9664;</span>
+        <span id="down">&#9654;</span>
       </div>
-      <span id="prev">&#9664;</span>
-      <span id="next">&#9654;</span>
-      <span id="up">&#9664;</span>
-      <span id="down">&#9654;</span>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
