--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
 
   <body>
+      <nav id="nav-home">
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo center"><img src="img/logo.jpg" id="logo"/></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+          <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+          <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+          <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+        </ul>
+      </div>
+    </nav>
     <div id="homepage-buttons"> 
       <a href="research/research.html" class="waves-effect waves-light btn-large" id="left-button">Research</a>
       <a class="waves-effect waves-light btn-large" id="right-button">Purchase</a>
