--- a/research/research.html
+++ b/research/research.html
@@ -35,8 +35,24 @@
           </div>
           <div class="horizontal-section">
             <h2>Select a Type of Car </h2>
+            <div class="container" id="research-container">
+              <div class="row">
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
 
-
+              </div>
+            </div>
+            <a class="waves-effect waves-light btn" id="prev">Back</a>
+            <a class="waves-effect waves-light btn" id="next">Next</a>
           </div>
           <div class="horizontal-section">
             3
@@ -64,10 +80,10 @@
             4
           </div>
         </div>
-        <span id="prev">&#9664;</span>
+<!--         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
         <span id="up">&#9664;</span>
-        <span id="down">&#9654;</span>
+        <span id="down">&#9654;</span> -->
       </div>
     </div>
 
