added new transparent logo to navbar, and added some sections to personalized search

--- a/research/research.html
+++ b/research/research.html
@@ -11,7 +11,7 @@
     <script>document.body.className += ' fade-out';</script>
     <nav>
       <div class="nav-wrapper white">
-        <a href="../index.html" class="brand-logo center"><img src="../img/logo.jpg" id="logo"/></a>
+        <a href="../index.html" class="brand-logo center"><img src="../img/logo.png" id="logo"/></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html"><i class="material-icons">search</i></a></li>
           <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
@@ -34,7 +34,7 @@
             </span>
           </div>
           <div class="horizontal-section">
-            <h2>Select a Type of Car </h2>
+            <h3>Select a Type of Car </h3>
             <div class="container" id="research-container">
               <div class="row">
                 <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
@@ -55,10 +55,37 @@
             <a class="waves-effect waves-light btn" id="next">Next</a>
           </div>
           <div class="horizontal-section">
-            3
-          </div>
+            <h3>What's important to you</h3>
+            <div class="container" id="research-container">
+              <div class="row">
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Gas Mileage</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Heated Seats</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Acceleration</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Handling</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Comfort</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">High Tech</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Leather Seats</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Sound System</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Don't Care</a></div>
+              </div>
+            </div>
+            <a class="waves-effect waves-light btn" id="prev">Back</a>
+            <a class="waves-effect waves-light btn" id="next">Next</a>
+          </div>          
           <div class="horizontal-section">
-            4
+            <h3>What kind of ride do you like?</h3>
+            <div class="container" id="research-container">
+              <div class="row">
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Responsive</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Smooth</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Fast</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Luxurious</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">No Frills</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Don't Care</a></div>
+              </div>
+            </div>
+            <a class="waves-effect waves-light btn" id="prev">Back</a>
+            <a class="waves-effect waves-light btn" id="next">Next</a>
           </div>
           <!-- vertical sliders -->
           <div class="vertical-section">  
@@ -80,6 +107,7 @@
             4
           </div>
         </div>
+
 <!--         <span id="prev">&#9664;</span>
         <span id="next">&#9654;</span>
         <span id="up">&#9664;</span>
