temporarily commented out navbar, research page now has fully responsive slider

--- a/research/research.html
+++ b/research/research.html
@@ -9,7 +9,7 @@
 
   <body id="research-body">
     <script>document.body.className += ' fade-out';</script>
-    <nav>
+<!--     <nav>
       <div class="nav-wrapper white">
         <a href="../index.html" class="brand-logo center"><img src="../img/logo.png" id="logo"/></a>
         <ul class="right hide-on-med-and-down">
@@ -19,104 +19,36 @@
           <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
-    <div class="row" id="gallery">
-      <div class="col s12 m12 l12">
-        <div id="slider">
-           <!-- Horizontal sliders -->
-           <div class="horizontal-section">  
-            <h2>How would you like to find your car?</h2>           
-            <span id="research-buttons">
-              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-              <br>
-              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
-            </span>
-          </div>
-          <div class="horizontal-section">
-            <h3>Select a Type of Car </h3>
-            <div class="container" id="research-container">
-              <div class="row">
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
 
-              </div>
-            </div>
-            <a class="waves-effect waves-light btn" id="prev">Back</a>
-            <a class="waves-effect waves-light btn" id="next">Next</a>
-          </div>
-          <div class="horizontal-section">
-            <h3>What's important to you</h3>
-            <div class="container" id="research-container">
-              <div class="row">
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Gas Mileage</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Heated Seats</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Acceleration</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Handling</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Comfort</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">High Tech</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Leather Seats</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Sound System</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Don't Care</a></div>
-              </div>
-            </div>
-            <a class="waves-effect waves-light btn" id="prev">Back</a>
-            <a class="waves-effect waves-light btn" id="next">Next</a>
-          </div>          
-          <div class="horizontal-section">
-            <h3>What kind of ride do you like?</h3>
-            <div class="container" id="research-container">
-              <div class="row">
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Responsive</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Smooth</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Fast</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Luxurious</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">No Frills</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn research-categories">Don't Care</a></div>
-              </div>
-            </div>
-            <a class="waves-effect waves-light btn" id="prev">Back</a>
-            <a class="waves-effect waves-light btn" id="next">Next</a>
-          </div>
-          <!-- vertical sliders -->
-          <div class="vertical-section">  
-            <h2>vertical section 2</h2>           
-            <span id="research-buttons">
-              <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
-              <br>
-              <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
-            </span>
-          </div>
-          <div class="vertical-section">
-            <h2>Select a Type of Car </h2>
-            <div id=> blabla </div>
-          </div>
-          <div class="vertical-section">
-            3
-          </div>
-          <div class="vertical-section">
-            4
-          </div>
-        </div>
+    <div id="shell">
+      <div id="gallery">
+      <!-- Horiztonal Section -->
+        <span class="horizontal-section">First Horizontal Div</span><!--  
+        --><span class="horizontal-section">Second Horizontal Div</span><!--  
+        --><span class="horizontal-section">Third Horizontal Div</span><!--  
+        --><span class="horizontal-section">Fourth Horizontal Div</span>
 
-<!--         <span id="prev">&#9664;</span>
-        <span id="next">&#9654;</span>
-        <span id="up">&#9664;</span>
-        <span id="down">&#9654;</span> -->
+        <!-- Vertical Section -->
+        <span class="vertical-section">First Vertical Div</span>
+        <span class="vertical-section">Second Vertical Div</span>
+        <span class="vertical-section">Third Vertical Div</span>
       </div>
+      <div id="t2">
+      </div>
+    </div>
+
+    <div id="buttons">
+      <button id="left">&laquo;</button>
+      <button id="right">&raquo;</button>
+      <button id="up">up</button>
+      <button id="down">down</button>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/materialize.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
+    <script type="text/javascript" src="../js/slider.js"></script>
   </body>
 </html>
