added navbar with proper functionality and no spacing issues

--- a/research/research.html
+++ b/research/research.html
@@ -9,7 +9,7 @@
 
   <body id="research-body">
     <script>document.body.className += ' fade-out';</script>
-<!--     <nav>
+    <nav>
       <div class="nav-wrapper white">
         <a href="../index.html" class="brand-logo center"><img src="../img/logo.png" id="logo"/></a>
         <ul class="right hide-on-med-and-down">
@@ -19,7 +19,7 @@
           <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
         </ul>
       </div>
-    </nav> -->
+    </nav>
 
 
     <div id="shell">
