--- a/research/research.html
+++ b/research/research.html
@@ -11,7 +11,7 @@
     <script>document.body.className += ' fade-out';</script>
     <nav>
       <div class="nav-wrapper white">
-        <a href="../index.html" class="brand-logo center"><img src="../img/logo.png" id="logo"/></a>
+        <a href="../index.html" class="brand-logo left"><img src="../img/logo.png" id="logo"/></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html"><i class="material-icons">search</i></a></li>
           <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
