fixed overflow spacing issues in horizontal containers that would skip lines

--- a/research/research.html
+++ b/research/research.html
@@ -25,7 +25,11 @@
     <div id="shell">
       <div id="gallery">
       <!-- Horiztonal Section -->
-        <span class="horizontal-section">First Horizontal Div</span><!--  
+        <span class="horizontal-section">
+          <h2>How would you like to find your car?</h2> 
+          <p> tlaskjdflkasjdflaksjdf </p>
+          <p>laksdjfklasjdflkasjdflkasjdf </p>          
+        </span><!--  
         --><span class="horizontal-section">Second Horizontal Div</span><!--  
         --><span class="horizontal-section">Third Horizontal Div</span><!--  
         --><span class="horizontal-section">Fourth Horizontal Div</span>
