added splash page slide for research section, updated js slider to slide on buttons

--- a/research/research.html
+++ b/research/research.html
@@ -25,19 +25,21 @@
     <div id="shell">
       <div id="gallery">
       <!-- Horiztonal Section -->
-        <span class="horizontal-section">
-          <h2>How would you like to find your car?</h2> 
-          <p> tlaskjdflkasjdflaksjdf </p>
-          <p>laksdjfklasjdflkasjdflkasjdf </p>          
-        </span><!--  
-        --><span class="horizontal-section">Second Horizontal Div</span><!--  
-        --><span class="horizontal-section">Third Horizontal Div</span><!--  
-        --><span class="horizontal-section">Fourth Horizontal Div</span>
+        <div class="horizontal-section">
+          <h3>How would you like to find your car?</h3> 
+            <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
+            <br>
+            <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
+        </div>
+
+        <div class="horizontal-section">Second Horizontal Div</div>
+        <div class="horizontal-section">Third Horizontal Div</div>
+        <div class="horizontal-section">Fourth Horizontal Div</div>
 
         <!-- Vertical Section -->
-        <span class="vertical-section">First Vertical Div</span>
-        <span class="vertical-section">Second Vertical Div</span>
-        <span class="vertical-section">Third Vertical Div</span>
+        <div class="vertical-section">First Vertical Div</div>
+        <div class="vertical-section">Second Vertical Div</div>
+        <div class="vertical-section">Third Vertical Div</div>
       </div>
       <div id="t2">
       </div>
