added buttons for back/next, need to fix their placement

--- a/research/research.html
+++ b/research/research.html
@@ -31,8 +31,27 @@
             <br>
             <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
         </div>
+        <div class="horizontal-section">
+            <h3>Select a Type of Car </h3>
+            <div class="container" id="research-container">
+              <div class="row">
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
+                <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
 
-        <div class="horizontal-section">Second Horizontal Div</div>
+              </div>
+            </div>
+            <a class="waves-effect waves-light btn back-button">Back</a>
+            <a class="waves-effect waves-light btn next-button">Next</a>          
+        </div>
         <div class="horizontal-section">Third Horizontal Div</div>
         <div class="horizontal-section">Fourth Horizontal Div</div>
 
