--- a/research/research.html
+++ b/research/research.html
@@ -4,6 +4,8 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../css/custom.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../css/steve.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../css/nouislider.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
@@ -31,11 +33,210 @@
         --><span class="horizontal-section">Fourth Horizontal Div</span>
 
         <!-- Vertical Section -->
-        <span class="vertical-section">First Vertical Div</span>
-        <span class="vertical-section">Second Vertical Div</span>
-        <span class="vertical-section">Third Vertical Div</span>
-      </div>
-      <div id="t2">
+        <!-- 1. Select MAKE -->
+        <span class="vertical-section">
+          <div class="row">
+            <div class="col">
+              <h4 style="margin:25px">Select a make:</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+                <img style="width:7em" src="../img/car-makes/Acura.png"><br>
+                Acura
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Audi.png"><br>
+              Audi
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Bentley.png"><br>
+              Audi
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/BMW.png"><br>
+              BMW
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+                <img style="width:7em" src="../img/car-makes/Buick.png"><br>
+                Buick
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Cadillac.png"><br>
+              Cadillac
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Chevrolet.png"><br>
+              Chevrolet
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Chrysler.png"><br>
+              Chrysler
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+                <img style="width:7em" src="../img/car-makes/Dodge.png"><br>
+                Dodge
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Fiat.png"><br>
+              Fiat
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/Ford.png"><br>
+              Ford
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_makes" style="text-align:center">
+              <img style="width:7em" src="../img/car-makes/GMC.png"><br>
+              GMC
+              </div>
+            </div>
+          </div>
+        </span>
+        <!-- END Select MAKE -->
+        <!-- 2. Select MODEL -->
+        <span class="vertical-section">
+          <div class="row">
+            <div class="col">
+              <h4 style="margin:25px">Select a model:</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+                <img style="width:7em" src="../img/car-types/Alternatives.png"><br>
+                Model A
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Compacts.png"><br>
+              Model B
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Convertibles.png"><br>
+              Model C
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Coupes.png"><br>
+              Model D
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+                <img style="width:7em" src="../img/car-types/Luxury.png"><br>
+                Model E
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Sedans.png"><br>
+              Model F
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Sport.png"><br>
+              Model G
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/SUVs.png"><br>
+              Model H
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+                <img style="width:7em" src="../img/car-types/Trucks.png"><br>
+                Model I
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Vans.png"><br>
+              Model J
+              </div>
+            </div>
+            <div class="col m3">
+              <div class="steve_models" style="text-align:center">
+              <img style="width:7em" src="../img/car-types/Wagons.png"><br>
+              Model K
+              </div>
+            </div>
+          </div>
+
+        </span>
+        <!-- END Select MODEL -->
+        <!-- 3. Select YEAR -->
+        <script type="text/javascript" src="../js/nouislider.js"></script>
+        <span class="vertical-section">
+          <div class="row">
+            <div class="col">
+              <h4 style="margin:25px">Select a year:</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <span id="selected_year"></span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+            <div id="test5" style="margin:50px 75px;width:500px;"></div>
+            <script>
+            var slider = document.getElementById('test5');
+            noUiSlider.create(slider, {
+             start: [20, 80],
+             connect: true,
+             step: 1,
+             range: {
+               'min': 0,
+               'max': 100
+             },
+             format: wNumb({
+               decimals: 0
+             })
+            });
+            </script>
+            </div>
+          </div>
+        </span>
+        <!-- END Select YEAR -->
       </div>
     </div>
 
@@ -50,5 +251,6 @@
     <script type="text/javascript" src="../js/materialize.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../js/slider.js"></script>
+
   </body>
 </html>
